saving progress - errors